Se agregó la tipografia

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <header class="cover">
       <div class="wrapper">
-        <p class="tagline">
+        <p class="tagline1">
           We're getting married!
         </p>
-        <p class="headline">
+        <p class="name">
           Zoe &amp; Alex
         </p>
         <p class="date">
@@ -36,7 +36,10 @@
           </h3>
           <img class="rings" src="activos/ceremony%20location.png" alt="Rings">
           <p class="ceremony">
-            St. Nicholas Church, 2 Trinity Square, Budapest
+            St. Nicholas Church
+          </p>
+          <p class="ceremony">
+            2 Trinity Square, Budapest
           </p>
         </div>
         <div class="fotos">
@@ -45,7 +48,10 @@
           </h3>
           <img class="camera" src="activos/photoshoot%20location.png" alt="Camera">
           <p class="photos">
-            Liberty Bastion, 23 Wisdom Road, Budapest
+            Liberty Bastion
+          </p>
+          <p class="photos">
+            23 Wisdom Road, Budapest
           </p>
         </div>
         <div class="fiesta">
@@ -54,7 +60,10 @@
           </h3>
           <img class="cake" src="activos/party%20location.png" alt="Cake">
           <p class="party">
-            Heaven Lounge, 14 Fairy Street, Budapest
+            Heaven Lounge
+          </p>
+          <p class="party">
+            14 Fairy Street, Budapest
           </p>
         </div>
       </section>
@@ -63,7 +72,7 @@
           Program
         </h2>
         <div class="prog">
-          <p class="tagline">
+          <p class="tagline2">
             "It's going to be somehow, that's for sure."
           </p>
           <ul class="times">
@@ -81,7 +90,7 @@
           Gifts
         </h2>
         <div class="gift">
-          <p class="tagline">
+          <p class="tagline3">
             The greatest gift for us is to have you there.
           </p>
           <img class="regalo" src="activos/gifts.png" alt="Gifts">
