Se agregaron enlaces

--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
             I'd like to do some kind of surprise for you guys at the party. To whom should I talk about this?
           </p>
           <p class="answer">
-            Discuss it with Abigail Smith. Just drop her an email at abigail@awesomemail.com.
+            Discuss it with Abigail Smith. Just drop her an email at <a href="mailto:abigail@awesomemail.com" title="E-mail" target="_blank">abigail@awesomemail.com</a>.
           </p>
           <p class="question">
             What should I wear? Do you have a dress code?
           </p>
           <p class="answer">
-            Wear what's comfortable to you. If it helps smart casual / business casual for the ladies and smart casual / informal for the gentlemen are perfect options.
+            Wear what's comfortable to you. If it helps <a href="#" target="_blank">smart casual</a> / <a href="#" target="_blank">business casual</a> for the ladies and <a href="#" target="_blank">smart casual</a> / <a href="#" target="_blank">informal</a> for the gentlemen are perfect options.
           </p>
           <p class="question">
             I would like some kind of special food (gluten-free, lactose-free, vegan, etc.)
           </p>
           <p class="answer">
-            Drop us a line here and we'll find a way.
+            Drop us a line <a href="mailto:zoeandalex@awesomemail.com" title="E-mail" target="_blank">here</a> and we'll find a way.
           </p>
         </div>
         <div class="othersmallstuff">
@@ -157,7 +157,7 @@
             I have a problem / question on the wedding day. With whom can I speak?
           </p>
           <p class="answer">
-            Jared Wright on this number: +36 30 000 0000.
+            Jared Wright on this number: <a href="tel:+36 30 000 0000">+36 30 000 0000</a>.
           </p>
           <p class="question">
             Can we bring kids?
@@ -182,17 +182,17 @@
             If you have any questions feel free to call / write us.
           </p>
           <p class="phone">
-            Phone: +36 30 000 0000 (Zoe) / +36 30 000 0000 (Alex)
+            Phone: <a href="tel:+36 30 000 0000">+36 30 000 0000</a> (Zoe) / <a href="tel:+36 30 000 0000">+36 30 000 0000</a> (Alex)
           </p>
           <p class="email">
-            Email: zoeandalex@awesomemail.com
+            Email: <a href="mailto:zoeandalex@awesomemail.com" title="E-mail" target="_blank">zoeandalex@awesomemail.com</a>
           </p>
         </div>
       </section>
     </main>
     <footer>
       <p>
-        Made with ♥ in Budapest ©2018 | Icons by Becris (CC 3.0 BY)
+        Made with ♥ in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris" target="_blank">Becris</a> (<a href="https://creativecommons.org/licenses/by/3.0/" title="Licenses" target="_blank">CC 3.0 BY</a>)
       </p>
     </footer>  
   </body>
