Encabezado de pantalla completa

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
   <body>
     <header class="cover">
       <div class="wrapper">
-        <p class="tagline1">
-          We're getting married!
-        </p>
-        <p class="name">
-          Zoe &amp; Alex
-        </p>
-        <p class="date">
-          August 1, 2018
-        </p>
+        <div class="text">
+          <p class="tagline1">
+            We're getting married!
+          </p>
+          <p class="name">
+            Zoe &amp; Alex
+          </p>
+          <p class="date">
+            August 1, 2018
+          </p>
+        </div>
       </div>
     </header>
     <main>
@@ -157,7 +159,7 @@
             I have a problem / question on the wedding day. With whom can I speak?
           </p>
           <p class="answer">
-            Jared Wright on this number: <a href="tel:+36 30 000 0000">+36 30 000 0000</a>.
+            Jared Wright on this number: <a href="tel:+36300000000">+36 30 000 0000</a>.
           </p>
           <p class="question">
             Can we bring kids?
@@ -182,7 +184,7 @@
             If you have any questions feel free to call / write us.
           </p>
           <p class="phone">
-            Phone: <a href="tel:+36 30 000 0000">+36 30 000 0000</a> (Zoe) / <a href="tel:+36 30 000 0000">+36 30 000 0000</a> (Alex)
+            Phone: <a href="tel:+36300000000">+36 30 000 0000</a> (Zoe) / <a href="tel:+36300000000">+36 30 000 0000</a> (Alex)
           </p>
           <p class="email">
             Email: <a href="mailto:zoeandalex@awesomemail.com" title="E-mail" target="_blank">zoeandalex@awesomemail.com</a>
