Se estilizó la sección de programa y regalos

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           Contact
         </h2>
         <div class="contacto">
-          <p class="paragraph">
+          <p class="paragraph1">
             If you have any questions feel free to call / write us.
           </p>
           <p class="phone">
