Se estilizó la sección de preguntas, contactos y pie de página

--- a/index.html
+++ b/index.html
@@ -193,9 +193,11 @@
       </section>
     </main>
     <footer>
-      <p>
-        Made with ♥ in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris" target="_blank">Becris</a> (<a href="https://creativecommons.org/licenses/by/3.0/" title="Licenses" target="_blank">CC 3.0 BY</a>)
-      </p>
+      <div class="wrapper1">
+        <p>
+          Made with ♥ in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris" target="_blank">Becris</a> (<a href="https://creativecommons.org/licenses/by/3.0/" title="Licenses" target="_blank">CC 3.0 BY</a>)
+        </p>
+      </div>
     </footer>  
   </body>
   
