Se estilizó para computadoras

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville:wght@400;700&family=Mulish:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="icon" type="image/png" href="activos/favicon.png">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
 
@@ -32,7 +33,7 @@
         <h2 class="title">
           Locations
         </h2>
-        <div class="ceremonia">
+        <div class="ceremonia left">
           <h3 class="subtitle">
             Ceremony
           </h3>
@@ -44,7 +45,7 @@
             2 Trinity Square, Budapest
           </p>
         </div>
-        <div class="fotos">
+        <div class="fotos left">
           <h3 class="subtitle">
             Photos
           </h3>
@@ -56,7 +57,7 @@
             23 Wisdom Road, Budapest
           </p>
         </div>
-        <div class="fiesta">
+        <div class="fiesta left">
           <h3 class="subtitle">
             Party
           </h3>
@@ -105,7 +106,7 @@
         <h2 class="title">
           Questions and Answers
         </h2>
-        <div class="travelandaccomodations">
+        <div class="travelandaccomodations left">
           <h3 class="subtitle">
             Travel and accomodations
           </h3>
@@ -128,7 +129,7 @@
             The 916 bus is in service all night at the castle and it hits every major traffic hub in the city.
           </p>
         </div>
-        <div class="foodandfestivities">
+        <div class="foodandfestivities left">
           <h3 class="subtitle">
             Food and festivities
           </h3>
@@ -151,7 +152,7 @@
             Drop us a line <a href="mailto:zoeandalex@awesomemail.com" title="E-mail" target="_blank">here</a> and we'll find a way.
           </p>
         </div>
-        <div class="othersmallstuff">
+        <div class="othersmallstuff left">
           <h3 class="subtitle">
             Other small stuff
           </h3>
